[package]
name = "tese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.36.0", features = ["full"]}
serde = {version = "1.0.197", features = ["derive"]}
mongodb = "2.2.0"
bson = "2.2.0"
dotenv = "0.15.0"
actix-web = "4"